ULB-001 feat: Ultrabox 프로젝트에서 사용될 인메모리 디비 설정 추가
해당 프로젝트에서 실제 DB 구축 전 임시로 H2 DB 예정으로, 해당 인메모리 디비 사용을 위한 설정 및 디펜던시 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,13 @@
+# Inmemory DB 설정
 spring:
   h2:
     console:
-      enabled: true;
+      enabled: true
+      path: /h2-console
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ps
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
